objects/Credits_Checks__c.object
<CustomObject>
    <fields>
        <fullName>ACV_User_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACV User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if record is for an Adjustment of an existing Credit</description>
        <label>Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Approved__c</fullName>
        <description>Amount actually approved for the credit/check.</description>
        <label>Amount Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <description>The amount requested by the individual creating the Credit/Check Request</description>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicable_To__c</fullName>
        <label>Applicable To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACV Fees</fullName>
                </value>
                <value>
                    <fullName>Assurance</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Denial_Date__c</fullName>
        <description>Date/Time of Approval Status changing to Approved or Denied.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval/Denial Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>set by approval process</description>
        <inlineHelpText>Status of the credit check approval</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Done Successful</fullName>
                </value>
                <value>
                    <fullName>Done Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is entered by the approver to identify who approved the transaction.</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credits_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arb_Amount_Approved__c</fullName>
        <description>To capture the Exact dollar value as Arb Amount Requested field, once Credit &amp; Check Approved Status = Approved, as the regular field lacks the decimal places. Sum Resolution + Tow + Diag approved for payout</description>
        <inlineHelpText>Sum Resolution + Tow + Diag approved for payout</inlineHelpText>
        <label>Total Arb Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auction Related to the Credit/Check issued</description>
        <label>Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Credits &amp; Checks</relationshipLabel>
        <relationshipName>Credits_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>THis field looks to the budget record associated with the credit and check</description>
        <label>Budget Name</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Credits &amp; Checks</relationshipLabel>
        <relationshipName>Credits_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Credits &amp; Checks</relationshipLabel>
        <relationshipName>Credits_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint_Approved_Credits__c</fullName>
        <description>Prior to approval of this record, this reflects the sum of total payouts previously approved for this Complaint. If this record is approved, that value is immediately included in this field.</description>
        <formula>Resolution__r.complaint_id__r.Total_Approved_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prior to approval of this record, this reflects the sum of total payouts previously approved for this Complaint. If this record is approved, that value is immediately included in this field.</inlineHelpText>
        <label>Prior Complaint Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Date the Credit Check record was created</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Id__c</fullName>
        <description>Id received when credit successfully commit to api</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The dealer being issued the credit - filled in by the entry of the credit/check - should be selecting the seller or buyer at that point.</description>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credits &amp; Checks</relationshipLabel>
        <relationshipName>Credits_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealership_ID__c</fullName>
        <description>Dealer ID from Tools</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dealer ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_Forgiveness_Notes__c</fullName>
        <description>Notes to indicate what happened during a debt forgiveness interaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Debt Forgiveness Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Amount__c</fullName>
        <description>This field displays the diagnostic amount from the resolution record and is NOT included in the amount of the credit/check value. Diag refund value, only. Reflects requested amount, and then approved amount, if approved.</description>
        <formula>Resolution__r.Amount_Diagnostic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Diag refund value, only. Reflects requested amount, and then approved amount, if approved.</inlineHelpText>
        <label>Diagnostic Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Additional note on the reason for issuing the credit/check</inlineHelpText>
        <label>Explanation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>Budget_Name__r.Name</formula>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Netsuite_ID__c</fullName>
        <description>Netsuite ID pulling from the Account object</description>
        <formula>Dealer__r.Netsuite_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Netsuite ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Credit_Id__c</fullName>
        <description>Used in the CreditAPI for account_Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Organization Credit Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Parent Credit record the current record(Adjustment) is related to.</description>
        <inlineHelpText>The Credit record an Adjustment is related to</inlineHelpText>
        <label>Parent Credit</label>
        <referenceTo>Credits_Checks__c</referenceTo>
        <relationshipLabel>Parent Credit</relationshipLabel>
        <relationshipName>Credits_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>What type of payment will be issued for this credit/check</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACV Credit Assigned</fullName>
                </value>
                <value>
                    <fullName>ACV Issue Check</fullName>
                </value>
                <value>
                    <fullName>ACV to Re-List</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Seller Issue Check</fullName>
                </value>
                <value>
                    <fullName>Unwound Back to Seller</fullName>
                </value>
                <value>
                    <fullName>ACV Credit Deduction</fullName>
                </value>
                <value>
                    <fullName>Debt Forgiveness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed_in_Netsuite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked by Megan Greene (MVP until Netsuite is built out) when it is processed by Netsuite.</description>
        <label>Processed in Netsuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Describes the financial category of the payment</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Bad Debt Expense</fullName>
                </value>
                <value>
                    <fullName>Goodwill</fullName>
                </value>
                <value>
                    <fullName>No Direct Expense to ACV</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_FTB__c</fullName>
        <description>Recent FTB field from the Account needed on the credit check object</description>
        <formula>Dealer__r.Recent_FTB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a field will display on a first time buyer&apos;s for the first 14 days after their first buy</inlineHelpText>
        <label>Recent FTB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Amount__c</fullName>
        <description>Resolution value, only. Reflects requested amount, and then approved amount, if approved.</description>
        <formula>Resolution__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Resolution value, only. Reflects requested amount, and then approved amount, if approved.</inlineHelpText>
        <label>Resolution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution</label>
        <referenceTo>Resolution__c</referenceTo>
        <relationshipLabel>Credits &amp; Checks</relationshipLabel>
        <relationshipName>Credits_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <description>Cause for issuing Credit/Check - associated with dependant picklist with Financial Category</description>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arbitration Unavoidable</fullName>
                </value>
                <value>
                    <fullName>Arbitration Avoidable</fullName>
                </value>
                <value>
                    <fullName>Zero Downside</fullName>
                </value>
                <value>
                    <fullName>Past Arbitration Time Frame – 48-hour ACV Transport</fullName>
                </value>
                <value>
                    <fullName>Past Arbitration Time Frame – 10-day Arbitration</fullName>
                </value>
                <value>
                    <fullName>Component Not Covered</fullName>
                </value>
                <value>
                    <fullName>Disclosure Dispute</fullName>
                </value>
                <value>
                    <fullName>Double Sale</fullName>
                </value>
                <value>
                    <fullName>48-hour Title Notice</fullName>
                </value>
                <value>
                    <fullName>Transportation Issue</fullName>
                </value>
                <value>
                    <fullName>Other Goodwill Issue</fullName>
                </value>
                <value>
                    <fullName>First Time Buyer</fullName>
                </value>
                <value>
                    <fullName>14-Day Guarantee</fullName>
                </value>
                <value>
                    <fullName>Other Promotion</fullName>
                </value>
                <value>
                    <fullName>Buyer Fee Refund / Correction</fullName>
                </value>
                <value>
                    <fullName>Seller Fee Refund / Correction</fullName>
                </value>
                <value>
                    <fullName>Transport Fee Refund / Correction</fullName>
                </value>
                <value>
                    <fullName>Capital Fee Refund / Correction</fullName>
                </value>
                <value>
                    <fullName>Non-Payment</fullName>
                </value>
                <value>
                    <fullName>Auction Error</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slam_Dunk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If indicated, this request is a Slam Dunk which means a quick win for IST.</description>
        <label>Slam Dunk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Arb_Amount__c</fullName>
        <formula>IF(
NOT(ISNULL( Resolution__c )),
 Arb_Amount_Approved__c +  Diagnostic_Amount__c +  Tow_Fee__c,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Approved Arb Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Arb_Amount_Requested__c</fullName>
        <description>Sum Resolution + Tow + Diag being requested</description>
        <inlineHelpText>Sum Resolution + Tow + Diag being requested</inlineHelpText>
        <label>Total Arb Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tow_Fee__c</fullName>
        <description>Tow refund value, only. Reflects requested amount, and then approved amount, if approved.</description>
        <formula>Resolution__r.Tow_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tow refund value, only. Reflects requested amount, and then approved amount, if approved.</inlineHelpText>
        <label>Tow Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Credit &amp; Check</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACV_User_Id__c</columns>
        <columns>Dealer__c</columns>
        <columns>Budget_Name__c</columns>
        <columns>Case__c</columns>
        <columns>Auction__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Created_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Amount_Approved__c</columns>
        <columns>Amount_Requested__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Budget_Name__c</field>
            <operation>notEqual</operation>
            <value>Arbitration</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_credit_and_checks</fullName>
        <columns>NAME</columns>
        <columns>ACV_User_Id__c</columns>
        <columns>Dealer__c</columns>
        <columns>Budget_Name__c</columns>
        <columns>Case__c</columns>
        <columns>Auction__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Created_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Amount_Approved__c</columns>
        <columns>Amount_Requested__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Budget_Name__c</field>
            <operation>notEqual</operation>
            <value>Arbitration</value>
        </filters>
        <filters>
            <field>Budget_Name__c</field>
            <operation>equals</operation>
            <value>IST</value>
        </filters>
        <filters>
            <field>Approval_Denial_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>credit and checks - IST Breakdown</label>
    </listViews>
    <listViews>
        <fullName>Credit_ACV_Central_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit ACV Central</label>
        <queue>Credit_ACV_Central</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Arbitration_Credits_Checks</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Payment_Type__c</columns>
        <columns>Amount_Requested__c</columns>
        <columns>Explanation__c</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Budget_Name__c</field>
            <operation>equals</operation>
            <value>Arbitration</value>
        </filters>
        <filters>
            <field>Created_Date__c</field>
            <operation>greaterThan</operation>
            <value>6/5/2020</value>
        </filters>
        <label>Arbitration Resolutions</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_California_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit California</label>
        <queue>Credit_California</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Carolinas_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Carolinas</label>
        <queue>Credit_Carolinas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Central_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Mid - West</label>
        <queue>Credit_Mid_West</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Flordia_South_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Florida South</label>
        <queue>Credit_Florida_South</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Florida_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Southeast</label>
        <queue>Credit_Southeast</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Great_Lakes_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Greater NY</label>
        <queue>Credit_Greater_NY</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Great_Lakes_West_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Great Lakes West</label>
        <queue>Credit_Great_Lakes_West</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Heartland_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Heartland</label>
        <queue>Credit_Heartland</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_IST_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit IST</label>
        <queue>Credit_IST</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Major_Accounts_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Major Accounts</label>
        <queue>Credit_Major_Accounts</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Marketing_Credits_Checks</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit Marketing</label>
        <queue>Credit_Marketing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Credits &amp; Checks  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits &amp; Checks</pluralLabel>
    <recordTypes>
        <fullName>Check</fullName>
        <active>true</active>
        <description>Produces a check record to issue check by payments</description>
        <label>Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit</fullName>
        <active>true</active>
        <description>This record type issues a credit by payments</description>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice</fullName>
        <active>true</active>
        <description>Creates an invoice for payments</description>
        <label>Invoice</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>